# voboost-inject

./: .editorconfig  .gitignore  AGENTS.md  Makefile  README.md  meson.build
.github/workflows/: ci.yml  release.yml
config/: android-cross.ini  config-uncrustify.cfg  config-vala-lint.conf  key-dev-public.pem
keys/: README.md  dev-public.pem
openspec/changes/archive/2026-06-28-fix-android-cross-build/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-28-fix-android-cross-build/specs/build-and-signing/: spec.md
openspec/changes/archive/2026-06-28-fix-android-cross-build/specs/provisioning/: spec.md
openspec/changes/archive/2026-06-28-fix-ndk-path/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-28-fix-ndk-path/specs/build-and-signing/: spec.md
openspec/changes/archive/2026-06-28-fix-provisioning-wraps/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-28-fix-provisioning-wraps/specs/build-and-signing/: spec.md
openspec/changes/archive/2026-06-28-fix-provisioning-wraps/specs/provisioning/: spec.md
openspec/changes/archive/2026-06-29-ota/: tasks.md
openspec/changes/archive/2026-06-29-ota/specs/atomic-apply-rollback/: spec.md
openspec/changes/archive/2026-06-29-ota/specs/release-manifest/: spec.md
openspec/changes/archive/2026-06-29-ota/specs/update-planes/: spec.md
openspec/changes/archive/2026-06-30-round7-techdebt/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-30-round7-techdebt/specs/app-interface/: spec.md
openspec/changes/archive/2026-06-30-round7-techdebt/specs/daemon-lifecycle/: spec.md
openspec/changes/archive/2026-06-30-round7-techdebt/specs/release-manifest/: spec.md
openspec/changes/archive/ci/: design.md  proposal.md  tasks.md
openspec/changes/archive/ci/specs/ci-pipeline/: spec.md
openspec/changes/archive/ci/specs/ci-release/: spec.md
openspec/changes/archive/ci/specs/ci-signing/: spec.md
openspec/changes/archive/ci/specs/ci-versioning/: spec.md
openspec/changes/archive/init/: design.md  proposal.md  tasks.md
openspec/changes/archive/init/specs/developer-docs/: spec.md
openspec/changes/archive/init/specs/provisioning/: spec.md
openspec/changes/archive/init/specs/quality-gates/: spec.md
openspec/changes/archive/inject/: design.md  proposal.md  tasks.md
openspec/changes/archive/inject/specs/app-interface/: spec.md
openspec/changes/archive/inject/specs/build-and-signing/: spec.md
openspec/changes/archive/inject/specs/daemon-lifecycle/: spec.md
openspec/changes/archive/inject/specs/device-safety/: spec.md
openspec/changes/archive/inject/specs/injection-control/: spec.md
openspec/changes/archive/inject/specs/provisioning/: spec.md
openspec/changes/archive/inject/specs/trust-verification/: spec.md
openspec/changes/emulator-spawn-gating-crash/: design.md  proposal.md  tasks.md
openspec/changes/emulator-spawn-gating-crash/specs/injection-control/: spec.md
openspec/changes/ota/: design.md  proposal.md
openspec/changes/ota-core-selfupdate/: design.md  proposal.md  tasks.md
openspec/changes/ota-core-selfupdate/specs/ota/: spec.md
openspec/changes/ota/specs/incremental-delta/: spec.md
openspec/changes/ota/specs/system-ota-survival/: spec.md
openspec/changes/remove-native-agent-injection/: design.md  proposal.md  tasks.md
openspec/changes/remove-native-agent-injection/specs/injection-control/: spec.md
openspec/changes/remove-native-agent-injection/specs/trust-verification/: spec.md
openspec/specs/app-interface/: spec.md
openspec/specs/atomic-apply-rollback/: spec.md
openspec/specs/build-and-signing/: spec.md
openspec/specs/ci-pipeline/: spec.md
openspec/specs/ci-release/: spec.md
openspec/specs/ci-signing/: spec.md
openspec/specs/ci-versioning/: spec.md
openspec/specs/daemon-lifecycle/: spec.md
openspec/specs/developer-docs/: spec.md
openspec/specs/device-safety/: spec.md
openspec/specs/incremental-delta/: spec.md
openspec/specs/injection-control/: spec.md
openspec/specs/provisioning/: spec.md
openspec/specs/quality-gates/: spec.md
openspec/specs/release-manifest/: spec.md
openspec/specs/system-ota-survival/: spec.md
openspec/specs/trust-verification/: spec.md
openspec/specs/update-planes/: spec.md
src/: app_zone_watcher.vala  boot.vala  capstone.vapi  ed25519.vapi  frida-stubs.vapi  frida_controller.vala  gthread-2.0.vapi  log.vala  main.vala  manifest.vala  meson.build  ota.vala  plan_reader.vala  process_watcher.vala  safety.vala  status.vala  supervisor.vala  trust_store.vala  version.vala.in
subprojects/: .gitignore  frida-core.wrap  frida-gum.wrap  frida.wrap  libgee.wrap  libnice.wrap  libpsl.wrap  libsoup.wrap  monocypher.wrap  quickjs.wrap  selinux.wrap  tinycc.wrap  usrsctp.wrap
subprojects/packagefiles/: frida-core-libc-shim-opaque-file-bionic.patch  frida-meson-libcpp-hardening-mode.patch
subprojects/packagefiles/monocypher/: meson.build
subprojects/packagefiles/selinux/: meson.build
subprojects/packagefiles/selinux/libselinux/src/: meson.build
test/: boot_test.vala  integration-tests.md  log_test.vala  manifest_test.vala  meson.build  ota_test.vala  plan_test.vala  safety_test.vala  smoke.sh  status_test.vala  trust_store_test.vala
test/fixtures/: gen-fixtures.sh  voboost-inject-bad  voboost-inject-bad-binary.apk  voboost-inject-bad-sig.apk  voboost-inject-deflated.apk
